[#noissue] Cleanup versionPrefixRewriter